--- a/sprint-1/src/styles/main.css
+++ b/sprint-1/src/styles/main.css
@@ -118,10 +118,17 @@ h5 {
 }
 
 .header .search-bar-text {
+  background-image: url("../assets/Icons/svg/Icon-search.svg");
+  background-repeat: no-repeat;
+  background-position: left;
   width: 100%;
   height: 49px;
   padding-left: 35px;
   border-radius: 4px;
+}
+
+.header .search-bar-text:focus {
+  background-image: none;
 }
 
 .header .plusSign {
