--- a/sprint-1/src/styles/partials/_header.scss
+++ b/sprint-1/src/styles/partials/_header.scss
@@ -34,10 +34,16 @@
 		margin-top: 8px;
 	}
 	.search-bar-text {
+		background-image: url("../assets/Icons/svg/Icon-search.svg");
+		background-repeat: no-repeat;
+		background-position: left;
 		width: 100%;
 		height: 49px;
 		padding-left: 35px;
 		border-radius: 4px;
+	}
+	.search-bar-text:focus {
+		background-image: none;
 	}
 	.plusSign {
 		padding-right: 5%;
