--- a/sprint-1/src/styles/main.css
+++ b/sprint-1/src/styles/main.css
@@ -202,6 +202,13 @@ h5 {
 .hero {
   width: 100vw;
   height: 183px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #000;
 }
 
 .hero__video {
@@ -231,17 +238,17 @@ h5 {
     line-height: 20px;
   }
   .hero {
-    margin-top: 0;
-    height: 433px;
+    height: 400px;
   }
   .hero__video {
-    height: 433px;
+    height: 400px;
+    width: 90%;
   }
 }
 
 @media only screen and (min-width: 768px) and (min-width: 1440px) {
   .hero {
-    height: 540px;
+    height: 550px;
   }
   .hero__video {
     height: 540px;
