--- a/sprint-2/src/styles/partials/_nextVideo.scss
+++ b/sprint-2/src/styles/partials/_nextVideo.scss
@@ -1,6 +1,6 @@
-.next__video {
+.next__video,
+a {
 	display: flex;
-	align-items: center;
 	margin: 24px 0;
 	text-decoration: none;
 	color: #000;
