Upload page is complete, most CSS is done

--- a/sprint-2/src/styles/main.scss
+++ b/sprint-2/src/styles/main.scss
@@ -37,3 +37,4 @@ h5 {
 @import "./partials/comments";
 @import "./partials/nextVideo";
 @import "./partials/main-flex";
+@import "./partials/upload";
