--- a/sprint-2/src/styles/main.css
+++ b/sprint-2/src/styles/main.css
@@ -101,12 +101,18 @@ h5 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 70%;
+  width: 221px;
   height: 48px;
   border-radius: 4px;
-  margin-top: 8px;
+  padding: 0;
   color: #fff;
+  border: 0;
   background-color: #0095ff;
+}
+
+.header a {
+  margin-top: 8px;
+  margin-bottom: 0;
 }
 
 .header__search-avatar {
@@ -166,9 +172,11 @@ h5 {
     margin-right: 5%;
   }
   .header__search-button {
-    width: 24%;
+    width: 90px;
     margin-left: 6%;
-    margin-top: 16px;
+  }
+  .header a {
+    margin-top: 15px;
   }
   .header__search-bar {
     -webkit-box-pack: start;
@@ -196,6 +204,16 @@ h5 {
   .header {
     margin-left: 12.5%;
     margin-right: 12.5%;
+  }
+  .header__search-button {
+    width: 130px;
+    margin-left: 6%;
+  }
+  .header a {
+    margin-left: 4%;
+  }
+  .header__search-avatar {
+    margin-left: 3.9%;
   }
 }
 
@@ -276,6 +294,12 @@ h5 {
   height: 20px;
   margin-top: 4px;
   margin-right: 2.8%;
+}
+
+.movie__icons-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .movie__heading {
@@ -689,6 +713,90 @@ a-heading-bold {
   }
   .main-movie-div {
     width: 66%;
+  }
+}
+
+.upload {
+  margin: 0 5%;
+}
+
+.upload__heading {
+  font-family: "AvenirBold";
+}
+
+.upload__heading-small {
+  margin-bottom: 0;
+  opacity: 0.4;
+  font-family: "AvenirBold";
+}
+
+.upload__input-one {
+  width: 100%;
+  height: 50px;
+  background-color: #f9f8f8;
+  border-radius: 4px;
+}
+
+.upload__input-two {
+  width: 100%;
+  height: 143px;
+  background-color: #f9f8f8;
+  border-radius: 4px;
+}
+
+.upload__input-image {
+  width: 100%;
+}
+
+.upload__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 221px;
+  height: 48px;
+  border-radius: 4px;
+  padding: 0;
+  color: #fff;
+  border: 0;
+  background-color: #0095ff;
+  margin: 32px auto 24px;
+  font-family: "AvenirBold";
+}
+
+.upload__button-cancel {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #0095ff;
+  font-family: "AvenirBold";
+}
+
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 36px;
+    line-height: 44px;
+  }
+  h2 {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  h3 {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  h4 {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  h5 {
+    font-size: 12px;
+    line-height: 20px;
   }
 }
 /*# sourceMappingURL=main.css.map */
