--- a/sprint-2/src/styles/partials/_header.scss
+++ b/sprint-2/src/styles/partials/_header.scss
@@ -19,12 +19,17 @@
 	&__search-button {
 		display: flex;
 		justify-content: center;
-		width: 70%;
+		width: 221px;
 		height: 48px;
 		border-radius: 4px;
-		margin-top: 8px;
+		padding: 0;
 		color: #fff;
-		background-color: $brainflixBlue;
+		border: 0;
+		background-color: #0095ff;
+	}
+	a {
+		margin-top: 8px;
+		margin-bottom: 0;
 	}
 	&__search-avatar {
 		width: 50px;
@@ -78,9 +83,11 @@
 		margin-right: 5%;
 
 		&__search-button {
-			width: 24%;
+			width: 90px;
 			margin-left: 6%;
-			margin-top: 16px;
+		}
+		a {
+			margin-top: 15px;
 		}
 		&__search-bar {
 			justify-content: flex-start;
@@ -106,6 +113,18 @@
 		.header {
 			margin-left: 12.5%;
 			margin-right: 12.5%;
+
+			&__search-button {
+				width: 130px;
+				margin-left: 6%;
+			}
+			a {
+				margin-left: 4%;
+			}
+
+			&__search-avatar {
+				margin-left: 3.9%;
+			}
 		}
 	}
 }
