--- a/sprint-2/src/styles/partials/_main-flex.scss
+++ b/sprint-2/src/styles/partials/_main-flex.scss
@@ -19,5 +19,8 @@
 	}
 	.main-movie-div {
 		width: 66%;
+		padding-right: 1px;
+		border-right: 1px solid $dividerColour;
+		margin-right: 2%;
 	}
 }
