--- a/sprint-2/src/styles/partials/_comments.scss
+++ b/sprint-2/src/styles/partials/_comments.scss
@@ -133,7 +133,7 @@
 }
 @include large {
 	.comments {
-		width: 712px;
+		width: 100%;
 
 		&__heading {
 			margin-top: 40px;
@@ -141,6 +141,9 @@
 
 		&__input-div {
 			width: 100%;
+		}
+		&__input-text {
+			width: 40%;
 		}
 	}
 }
