--- a/sprint-2/src/styles/partials/_upload.scss
+++ b/sprint-2/src/styles/partials/_upload.scss
@@ -111,30 +111,37 @@
 				margin-left: 75%;
 			}
 		}
-	}
-	.upload__input-image {
-		width: 59%;
-		height: 183px;
-	}
-	.upload__heading-div {
-		border-bottom: none;
-		padding-bottom: 0;
-		margin-bottom: 24px;
-		&-small {
-			width: 55%;
-			padding-bottom: 5px;
+		&__flex {
+			display: flex;
+		}
+		&__input {
+			&-image {
+				width: 100%;
+				height: 183px;
+			}
+			&-two {
+				height: 94px;
+			}
+		}
+		&__heading {
+			&-div {
+				border-bottom: none;
+				padding-bottom: 0;
+				margin-bottom: 24px;
+				&-small {
+					width: 66%;
+					padding-bottom: 5px;
+				}
+				&-main {
+					width: 32%;
+					padding-bottom: 5px;
+					margin-right: 2.23%;
+				}
+			}
+		}
+		&__flex {
 			border-bottom: 1px solid $dividerColour;
 		}
-		&-main {
-			width: 45%;
-			padding-bottom: 5px;
-			border-bottom: 1px solid $dividerColour;
-		}
 	}
-	.upload__flex {
-		display: flex;
-	}
-	.upload__input-two {
-		height: 94px;
-	}
+
 }
