--- a/sprint-2/src/styles/main.css
+++ b/sprint-2/src/styles/main.css
@@ -795,6 +795,16 @@ a-heading-bold {
   font-family: "AvenirBold";
 }
 
+.upload__button-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+}
+
 @media only screen and (min-width: 768px) {
   h1 {
     font-size: 36px;
@@ -823,9 +833,10 @@ a-heading-bold {
   }
   .upload__button-div {
     margin-top: 40px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     margin-bottom: 100px;
   }
   .upload__button-cancel {
