--- a/sprint-3/client/src/styles/main.css
+++ b/sprint-3/client/src/styles/main.css
@@ -127,10 +127,13 @@ h5 {
   background-image: url("../assets/Icons/svg/Icon-search.svg");
   background-repeat: no-repeat;
   background-position: left;
+  background-position-x: 20px;
   width: 100%;
   height: 49px;
-  padding-left: 35px;
+  padding-left: 50px;
   border-radius: 4px;
+  font-size: 16px;
+  font-family: "Avenir";
 }
 
 .header .search-bar-text:focus {
