--- a/sprint-3/client/src/styles/main.css
+++ b/sprint-3/client/src/styles/main.css
@@ -246,10 +246,8 @@ h5 {
 .hero__video {
   width: 100%;
   height: 183px;
-}
-
-.hero__video ::poster {
-  width: 100%;
+  -o-object-fit: inherit;
+     object-fit: inherit;
 }
 
 @media only screen and (min-width: 768px) {
