--- a/sprint-3/client/src/styles/partials/_hero.scss
+++ b/sprint-3/client/src/styles/partials/_hero.scss
@@ -1,62 +1,59 @@
 .hero {
-	width: 100vw;
-	height: 183px;
-	display: flex;
-	justify-content: center;
-	background-color: #000;
+  width: 100vw;
+  height: 183px;
+  display: flex;
+  justify-content: center;
+  background-color: #000;
 
-	&__video {
-		width: 100%;
-		height: 183px;
-
-		& ::poster {
-			width: 100%;
-		}
-	}
+  &__video {
+    width: 100%;
+    height: 183px;
+    object-fit: inherit;
+  }
 }
 
 @include medium {
-	h1 {
-		font-size: 36px;
-		line-height: 44px;
-	}
+  h1 {
+    font-size: 36px;
+    line-height: 44px;
+  }
 
-	h2 {
-		font-size: 24px;
-		line-height: 32px;
-	}
+  h2 {
+    font-size: 24px;
+    line-height: 32px;
+  }
 
-	h3 {
-		font-size: 16px;
-		line-height: 24px;
-	}
+  h3 {
+    font-size: 16px;
+    line-height: 24px;
+  }
 
-	h4 {
-		font-size: 14px;
-		line-height: 20px;
-	}
+  h4 {
+    font-size: 14px;
+    line-height: 20px;
+  }
 
-	h5 {
-		font-size: 12px;
-		line-height: 20px;
-	}
+  h5 {
+    font-size: 12px;
+    line-height: 20px;
+  }
 
-	.hero {
-		height: 400px;
+  .hero {
+    height: 400px;
 
-		&__video {
-			height: 400px;
-			width: 90%;
-		}
-	}
+    &__video {
+      height: 400px;
+      width: 90%;
+    }
+  }
 
-	@include large {
-		.hero {
-			height: 550px;
+  @include large {
+    .hero {
+      height: 550px;
 
-			&__video {
-				height: 540px;
-			}
-		}
-	}
+      &__video {
+        height: 540px;
+      }
+    }
+  }
 }
